--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -206,43 +206,32 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Kd-O9-gx9">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="75"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="poppe" translatesAutoresizingMaskIntoConstraints="NO" id="ehq-7j-WyS">
-                                        <rect key="frame" x="9" y="17" width="43" height="56"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="43" id="cJg-3k-vbM"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pontus H" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npp-Yn-z6d">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Pontus H" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npp-Yn-z6d">
                                         <rect key="frame" x="60" y="24" width="73" height="24"/>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="384 kr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Zk-JU-0kh">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="384 kr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Zk-JU-0kh">
                                         <rect key="frame" x="60" y="45" width="42" height="21"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i89-3e-ZE7">
-                                        <rect key="frame" x="559" y="29" width="33" height="32"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="poppe" translatesAutoresizingMaskIntoConstraints="NO" id="ehq-7j-WyS">
+                                        <rect key="frame" x="549" y="17" width="43" height="56"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="33" id="AFv-OK-aZU"/>
+                                            <constraint firstAttribute="width" constant="43" id="cJg-3k-vbM"/>
                                         </constraints>
-                                        <state key="normal" image="settings"/>
-                                    </button>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="ehq-7j-WyS" secondAttribute="bottom" constant="2" id="5lA-1c-IGL"/>
-                                    <constraint firstItem="i89-3e-ZE7" firstAttribute="top" secondItem="4Kd-O9-gx9" secondAttribute="top" constant="29" id="92j-fN-mOY"/>
-                                    <constraint firstItem="ehq-7j-WyS" firstAttribute="leading" secondItem="4Kd-O9-gx9" secondAttribute="leading" constant="9" id="9lU-kr-1po"/>
-                                    <constraint firstItem="npp-Yn-z6d" firstAttribute="leading" secondItem="ehq-7j-WyS" secondAttribute="trailing" constant="8" symbolic="YES" id="IWn-Cd-RYx"/>
+                                    <constraint firstAttribute="trailing" secondItem="ehq-7j-WyS" secondAttribute="trailing" constant="8" id="Lib-ip-Ek6"/>
                                     <constraint firstItem="npp-Yn-z6d" firstAttribute="top" secondItem="4Kd-O9-gx9" secondAttribute="top" constant="24" id="MKF-4K-4f1"/>
                                     <constraint firstAttribute="height" constant="75" id="oTj-dZ-3bT"/>
-                                    <constraint firstItem="i89-3e-ZE7" firstAttribute="centerY" secondItem="ehq-7j-WyS" secondAttribute="centerY" id="rpq-ne-mY6"/>
                                     <constraint firstItem="5Zk-JU-0kh" firstAttribute="leading" secondItem="npp-Yn-z6d" secondAttribute="leading" id="s2H-BH-onu"/>
-                                    <constraint firstItem="i89-3e-ZE7" firstAttribute="trailing" secondItem="4Kd-O9-gx9" secondAttribute="trailingMargin" id="soM-fU-AKO"/>
                                     <constraint firstItem="ehq-7j-WyS" firstAttribute="top" secondItem="4Kd-O9-gx9" secondAttribute="top" constant="17" id="uO7-7V-TBg"/>
                                     <constraint firstItem="5Zk-JU-0kh" firstAttribute="top" secondItem="4Kd-O9-gx9" secondAttribute="top" constant="45" id="znZ-z8-vJG"/>
                                 </constraints>
@@ -620,6 +609,5 @@
         <image name="icon_topplista" width="792" height="792"/>
         <image name="logotext" width="792" height="792"/>
         <image name="poppe" width="77" height="77"/>
-        <image name="settings" width="792" height="792"/>
     </resources>
 </document>
