--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -25,11 +25,34 @@
                                     <constraint firstAttribute="height" constant="600" id="aua-37-XM6"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-postadress" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="scP-e2-0rB">
-                                <rect key="frame" x="20" y="177" width="560" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-Tk-g8V">
+                                <rect key="frame" x="20" y="483" width="560" height="44"/>
+                                <color key="backgroundColor" red="0.98431372549999996" green="0.82745098039999998" blue="0.15686274510000001" alpha="0.95377155170000005" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="uAI-Ai-aqt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Återställ ditt lösenord"/>
+                                <connections>
+                                    <action selector="createAccount:" destination="t2r-lU-S5q" eventType="touchUpInside" id="HMi-CG-3cG"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="E-postadress" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kqj-7h-lY7">
+                                <rect key="frame" x="27" y="158" width="393" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="393" id="Bup-FU-kLl"/>
+                                    <constraint firstAttribute="height" constant="24" id="ptD-ry-FTg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r2M-90-8AI">
+                                <rect key="frame" x="20" y="183" width="560" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Vrc-W8-Niv"/>
+                                    <constraint firstAttribute="height" constant="30" id="WnR-Wo-deg"/>
                                 </constraints>
                                 <color key="textColor" red="0.77816506409999997" green="0.77816506409999997" blue="0.77816506409999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
@@ -40,16 +63,39 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RgL-5m-Vkj">
+                                <rect key="frame" x="20" y="535" width="560" height="45"/>
+                                <color key="backgroundColor" red="0.017112204805016518" green="5.8616726164473221e-05" blue="0.0" alpha="0.66000000000000003" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="CId-1a-WAK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Avbryt">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelRegistration:" destination="t2r-lU-S5q" eventType="touchUpInside" id="Xd7-IL-fwy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="scP-e2-0rB" firstAttribute="trailing" secondItem="qh1-b5-ub3" secondAttribute="trailingMargin" id="97R-0O-Pz8"/>
-                            <constraint firstItem="scP-e2-0rB" firstAttribute="leading" secondItem="qh1-b5-ub3" secondAttribute="leadingMargin" id="FpA-eb-EN5"/>
+                            <constraint firstItem="RgL-5m-Vkj" firstAttribute="leading" secondItem="qh1-b5-ub3" secondAttribute="leadingMargin" id="0BF-IN-gTd"/>
+                            <constraint firstItem="lZn-Tk-g8V" firstAttribute="leading" secondItem="RgL-5m-Vkj" secondAttribute="leading" id="36z-9g-dje"/>
+                            <constraint firstItem="RgL-5m-Vkj" firstAttribute="top" secondItem="CJB-u0-c1S" secondAttribute="bottom" constant="-65" id="4Ne-Un-170"/>
+                            <constraint firstItem="RgL-5m-Vkj" firstAttribute="top" secondItem="lZn-Tk-g8V" secondAttribute="bottom" constant="8" symbolic="YES" id="Edr-8C-am1"/>
                             <constraint firstItem="CJB-u0-c1S" firstAttribute="trailing" secondItem="qh1-b5-ub3" secondAttribute="trailingMargin" id="GbH-er-uWo"/>
-                            <constraint firstItem="CJB-u0-c1S" firstAttribute="top" secondItem="scP-e2-0rB" secondAttribute="bottom" constant="-207" id="H3v-8m-Hc8"/>
                             <constraint firstItem="CJB-u0-c1S" firstAttribute="leading" secondItem="qh1-b5-ub3" secondAttribute="leadingMargin" id="KgQ-db-hiy"/>
+                            <constraint firstItem="RgL-5m-Vkj" firstAttribute="trailing" secondItem="qh1-b5-ub3" secondAttribute="trailingMargin" id="V9I-2T-d14"/>
+                            <constraint firstItem="kqj-7h-lY7" firstAttribute="top" secondItem="ta3-Di-QJ4" secondAttribute="bottom" constant="138" id="acw-11-Osu"/>
                             <constraint firstItem="CJB-u0-c1S" firstAttribute="top" secondItem="qh1-b5-ub3" secondAttribute="topMargin" id="n8M-Vw-fgt"/>
+                            <constraint firstItem="r2M-90-8AI" firstAttribute="leading" secondItem="qh1-b5-ub3" secondAttribute="leadingMargin" id="pDn-2c-bkU"/>
+                            <constraint firstItem="r2M-90-8AI" firstAttribute="top" secondItem="kqj-7h-lY7" secondAttribute="bottom" constant="1" id="psC-HP-4ab"/>
+                            <constraint firstItem="kqj-7h-lY7" firstAttribute="leading" secondItem="qh1-b5-ub3" secondAttribute="leadingMargin" constant="7" id="qBM-Rw-VkP"/>
+                            <constraint firstItem="r2M-90-8AI" firstAttribute="trailing" secondItem="qh1-b5-ub3" secondAttribute="trailingMargin" id="vLY-qf-ygl"/>
                             <constraint firstItem="OxU-Gp-dZD" firstAttribute="top" secondItem="CJB-u0-c1S" secondAttribute="bottom" id="yOm-mq-TZ0"/>
+                            <constraint firstItem="lZn-Tk-g8V" firstAttribute="trailing" secondItem="RgL-5m-Vkj" secondAttribute="trailing" id="ydJ-UT-uWE"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -132,7 +178,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ZP-QQ-Bql">
                                 <rect key="frame" x="20" y="486" width="560" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Ioy-oO-KIn"/>
                                 </constraints>
@@ -145,7 +191,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fz3-vI-NXe">
                                 <rect key="frame" x="20" y="536" width="560" height="44"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.49506870567375888" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="maA-4W-vka"/>
                                 </constraints>
@@ -389,7 +435,7 @@
                                     <constraint firstAttribute="width" constant="134" id="3Ao-1l-Jyr"/>
                                     <constraint firstAttribute="height" constant="24" id="xaw-Zv-7OF"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -399,7 +445,7 @@
                                     <constraint firstAttribute="height" constant="24" id="Eoc-zW-DDj"/>
                                     <constraint firstAttribute="width" constant="71" id="hgG-gF-esN"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -409,7 +455,7 @@
                                     <constraint firstAttribute="height" constant="24" id="17R-NC-ieb"/>
                                     <constraint firstAttribute="width" constant="98" id="ZBh-9K-4Pv"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -509,7 +555,7 @@
                                     <constraint firstAttribute="width" constant="68" id="il8-Fb-Yze"/>
                                     <constraint firstAttribute="height" constant="24" id="tlM-Qq-qOU"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -519,7 +565,7 @@
                                     <constraint firstAttribute="width" constant="79" id="fKa-Yn-7Z4"/>
                                     <constraint firstAttribute="height" constant="24" id="gx7-EB-nCV"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -529,7 +575,7 @@
                                     <constraint firstAttribute="height" constant="24" id="CJI-YT-zjp"/>
                                     <constraint firstAttribute="width" constant="26" id="h83-Yb-tUt"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -548,7 +594,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4yj-48-jfd">
                                 <rect key="frame" x="20" y="535" width="560" height="45"/>
-                                <color key="backgroundColor" red="0.17754407051282051" green="0.17754407051282051" blue="0.17754407051282051" alpha="0.95008081896551722" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.017112204805016518" green="5.8616726164473221e-05" blue="0.0" alpha="0.66063647845695761" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="aBA-KS-676"/>
                                 </constraints>
